syntax = "proto3";

package protos;

service HelloWorld {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc KeepReplyingHello (HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
